# workflow-playground

./: CMakeLists.txt  README.md
.github/workflows/: cpp-ci.yml
toys/: main.cpp
